RESOLVED FIXED80979
Loads from UInt32Arrays should not result in a double up-convert if it isn't necessary
https://bugs.webkit.org/show_bug.cgi?id=80979
Summary Loads from UInt32Arrays should not result in a double up-convert if it isn't ...
Filip Pizlo
Reported 2012-03-13 03:07:30 PDT
Patch forthcoming.
Attachments
the patch (11.72 KB, patch)
2012-03-13 03:16 PDT, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2012-03-13 03:08:00 PDT
Filip Pizlo
Comment 2 2012-03-13 03:16:10 PDT
Created attachment 131580 [details] the patch
Filip Pizlo
Comment 3 2012-03-13 16:00:09 PDT
Note You need to log in before you can comment on or make changes to this bug.